logs/cir-cuda/DOITGEN_doitgen.hip.cpp.cir.log
COMMAND: /workspace/llvm-bin/clang-23 -fclangir --gcc-install-dir=/usr/lib/gcc/x86_64-linux-gnu/11 -x hip --hip-path=/opt/rocm-6.3.0 --offload-arch=gfx942 -D__AMDGCN_WAVEFRONT_SIZE=64 -I/root/polybenchGpu/CUDA/DOITGEN -std=c++17 -O0 -c /root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp -I/root/polybenchGpu/HIP -I/root/polybenchGpu/HIP/DOITGEN -o /tmp/DOITGEN_doitgen.hip.cpp.cir.o

/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:124:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  124 |         hipGetDeviceProperties(&deviceProp, GPU_DEVICE);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.3.0/include/hip/hip_runtime_api.h:91:32: note: expanded from macro 'hipGetDeviceProperties'
   91 | #define hipGetDeviceProperties hipGetDevicePropertiesR0600
      |                                ^
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:126:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  126 |         hipSetDevice( GPU_DEVICE );
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:166:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  166 |         hipMalloc(&AGpu, NR * NQ * NP * sizeof(DATA_TYPE));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:167:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  167 |         hipMalloc(&C4Gpu, NP * NP * sizeof(DATA_TYPE));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:168:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  168 |         hipMalloc(&sumGpu, NR * NQ * NP * sizeof(DATA_TYPE));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:170:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  170 |         hipMemcpy(AGpu, A, NR * NQ * NP * sizeof(DATA_TYPE), hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:171:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  171 |         hipMemcpy(C4Gpu, C4, NP * NP * sizeof(DATA_TYPE), hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:172:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  172 |         hipMemcpy(sumGpu, sum, NR * NQ * NP * sizeof(DATA_TYPE), hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:181:3: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  181 |                 hipDeviceSynchronize();
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:183:3: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  183 |                 hipDeviceSynchronize();
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:189:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  189 |         hipMemcpy(sum_outputFromGpu, sumGpu, NR * NQ * NP * sizeof(DATA_TYPE), hipMemcpyDeviceToHost);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:191:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  191 |         hipFree(AGpu);
      |         ^~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:192:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  192 |         hipFree(C4Gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/DOITGEN/doitgen.hip.cpp:193:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  193 |         hipFree(sumGpu);
      |         ^~~~~~~~~~~~~~~
loc("/opt/rocm-6.3.0/include/hip/amd_detail/hip_assert.h":70:3): error: 'cir.cast' op result type address space does not match the address space of the operand
fatal error: CIR module verification error before running CIR-to-CIR passes
clang-23: error: clang frontend command failed with exit code 70 (use -v to see invocation)
clang version 23.0.0git (git@github.com:llvm/llvm-project.git f30c3bb2647d4385c9d2035b9a661ecc0bcca813)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /workspace/llvm-bin
Build config: +assertions
clang-23: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang-23: note: diagnostic msg: /tmp/doitgen-gfx942-51df70.hip
clang-23: note: diagnostic msg: /tmp/doitgen-143bdf.hip
clang-23: note: diagnostic msg: /tmp/doitgen-gfx942-51df70.sh
clang-23: note: diagnostic msg: 

********************
